--- a/clase4/index.html
+++ b/clase4/index.html
@@ -7,17 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./style.css" />
   <title>Adopt Me</title>
+  <script src="https://unpkg.com/react@18.2.0/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 
 <body>
   <div id="root">not rendered</div>
 
-  <script src="https://unpkg.com/react@18.2.0/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
   <script type="text/babel">
-
     const PhotoStory = (props) => {
       return (
         <div>
@@ -50,37 +48,52 @@
     };
 
     const UserTodo = (props) => {
-      const { title, imgProps, itemList } = props;
+      const { title, imgProps, todoItems } = props;
       const tagline = "ToDos"
+
+      // Interpolacion
       const mainTitle = `${title} ${tagline}`;
 
       return (
-        <div>
-          {props.children}
-        </div>
+        <>
+          <h1>{mainTitle}</h1>
+          <img
+            src={imgProps.src}
+            alt={imgProps.alt}
+            className="photo"
+          />
+          <ul>
+            {
+              todoItems.map((item, idx) => <li key={idx}>{item}</li>)
+            }
+          </ul>
+        </>
       )
     };
 
     const Story = (props) => {
       const { noLaquiero, ...otrosProps } = props;
+
+      // Nos permite usar un componente en runtime
       const Component = components[props.type];
 
-      return <Component {...props} />
-    }
+      return <Component {...otrosProps} />
+    };
 
 
     const App = () => {
+      const todoItems = ['Invent new traffic lights', 'Rehearse a movie scene', 'Improve the spectrum technology']
+      const imgProps = {
+        src: "https://i.imgur.com/yXOvdOSs.jpg",
+        alt: "Hedy Lamarr"
+      };
+
       return (
         <div>
           <h1>Adopt Me!</h1>
           <Pet name="Bella" animal="dog" breed="Bulldog" />
           <Pet name="Mimi" animal="cat" breed="black" />
-          <UserTodo>
-            {
-              itemList.map
-            }
-          </UserTodo>
-
+          <UserTodo title="Hedy Lamarr's" todoItems={todoItems} imgProps={imgProps} />
         </div>
       )
     };
