--- a/clase5/index.html
+++ b/clase5/index.html
@@ -16,20 +16,30 @@
 
   <script type="text/babel">
     // Make a function called `message` which returns the JSX we want to share
+    const Message = (props) => {
+      return (
+        <div className="message">
+          {props.greeting}, {props.subject}
+        </div>
+      );
+    }
 
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
-    const element = (
-      <div className="container">
-        <div className="message">Hello World</div>
-        <div className="message">Goodbye World</div>
-      </div>
-    )
+
+    const element = () => {
+      return (
+        <div className="container">
+          <Message greeting='Hello' subject="World" />
+          <Message greeting subject="class" />
+        </div>
+      )
+    };
 
     const App = () => {
       return (
         <div>
-          {element}
+          {element()}
         </div>
       )
     };
