--- a/clase5/styles.html
+++ b/clase5/styles.html
@@ -53,6 +53,12 @@
     // 🐨 also use the style prop to make the font italic
     // 💰 Here are available style attributes: backgroundColor, fontStyle
 
+    const Box = ({ style, className = '', size, ...otherProps }) => {
+      const sizeClassName = size ? `box--${size}` : '';
+
+      return <div className={`box ${className} ${sizeClassName}`} style={{ fontStyle: 'italic', backgroundColor: 'red', ...style }} {...otherProps} />
+    }
+
     const smallBox = <div>small lightblue box</div>
     const mediumBox = <div>medium pink box</div>
     const largeBox = <div>large orange box</div>
@@ -60,9 +66,15 @@
     const App = () => {
       return (
         <div>
-          {smallBox}
-          {mediumBox}
-          {largeBox}
+          <Box size="small" style={{ backgroundColor: 'lightblue' }}>
+            small lightblue box
+          </Box>
+          <Box size="medium" style={{ backgroundColor: 'pink' }}>medium pink box
+            <Box>
+              small lightblue box
+            </Box>
+          </Box>
+          <Box size="large" style={{ backgroundColor: 'orange' }}>large orange box</Box>
         </div>
       )
     };
